force-app/main/default/objects/Dog__c/fields/Vet_Clinic_Name__c.field-meta.xml
<CustomField>
    <fullName>Vet_Clinic_Name__c</fullName>
    <label>Vet Clinic Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>