force-app/main/default/objects/Dog__c/fields/Vet_Email__c.field-meta.xml
<CustomField>
    <fullName>Vet_Email__c</fullName>
    <label>Vet Email</label>
    <type>Email</type>
</CustomField>