force-app/main/default/objects/Dog__c/fields/Vet_Name__c.field-meta.xml
<CustomField>
    <fullName>Vet_Name__c</fullName>
    <label>Vet Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>