force-app/main/default/objects/Dog__c/fields/Vet_Phone__c.field-meta.xml
<CustomField>
    <fullName>Vet_Phone__c</fullName>
    <label>Vet Phone</label>
    <type>Phone</type>
</CustomField>