force-app/main/default/objects/Dog__c/fields/Vet_State__c.field-meta.xml
<CustomField>
    <fullName>Vet_State__c</fullName>
    <label>Vet State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>