force-app/main/default/objects/Dog__c/fields/Vet_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Vet_Zip_Code__c</fullName>
    <label>Vet Zip Code</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>