force-app/main/default/objects/Dog__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>Dog&apos;s weight in pounds</description>
    <label>Weight (lb)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>