force-app/main/default/objects/Dog__c/fields/XrayReceived__c.field-meta.xml
<CustomField>
    <fullName>XrayReceived__c</fullName>
    <description
    >The date the most recent version of Vet Xray Report was uploaded</description>
    <label>Last  Vet Xray Report</label>
    <type>Date</type>
</CustomField>