force-app/main/default/objects/Dog__c/fields/XrayRequired__c.field-meta.xml
<CustomField>
    <fullName>XrayRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Derived from Team.  Do not edit directly.</inlineHelpText>
    <label>X-ray required</label>
    <type>Checkbox</type>
</CustomField>