force-app/main/default/objects/Dog__c/validationRules/Dog_Certification_date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Dog_Certification_date_validation</fullName>
    <active>true</active>
    <description
    >Dog can be certified only after 6 months of activation</description>
    <errorConditionFormula>AND( 
 NOT(ISBLANK(ActivationDate__c)), 
 ADDMONTHS(ActivationDate__c, 6) &gt;= Today(),
 NOT(ISPICKVAL(PRIORVALUE(Status__c), 'Active')),
 ISPICKVAL(Status__c, 'Active'),
 NOT(ISNULL(MicrochipNumber__c)), 
 SpayedNeutered__c = TRUE  
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage
    >Dog can be certified only after 6 months from Activation Date, need to be Spayed/Neutered and need to have Microchip number.</errorMessage>
</ValidationRule>