force-app/main/default/objects/Dog__c/validationRules/Things_needed_for_Dog_Activation.validationRule-meta.xml
<ValidationRule>
    <fullName>Things_needed_for_Dog_Activation</fullName>
    <active>true</active>
    <description>List of fields needed for activation</description>
    <errorConditionFormula>AND(
OR( 
TODAY() &lt;  ADDMONTHS( Date_of_Birth__c ,14),
Health_Care_Records_Status__c  &lt;&gt; &quot;All Good&quot;  
), 
 ISCHANGED( Active__c) = TRUE )</errorConditionFormula>
    <errorMessage>For Activation of the Dog, It need to be atleast 14 months, Vaccinations need to be current,</errorMessage>
</ValidationRule>